e-commerce.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  background: #ff3131;
  font-family: sans-serif;
  width: 100%;
  overflow-x:hidden ;
}
a {
  text-decoration: none;
}
header {
  position: relative;
  padding: 15px 50px;
  display: flex;
  justify-content: space-between;
}
header a,
header nav > i {
  color: white;
  font-size: 30px;
  cursor: pointer;
}
header nav .cart {
  position: absolute;
  top: 0;
  right: -100%;
  background: rgba(255, 255, 255, 0.782);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(200px);
  height: 100vh;
  width: 100%;
  z-index: 10;
  transition: 500ms;
}
header nav > div.active {
  right: 0;
}
header nav .cart .NoContent{
    text-align: center;
    margin-top: 100px;
} 
header nav .cart .exitCart{
    position: absolute;
    top:20px;
    right:50px;
    font-size:35px;
    color:#222;
    cursor: pointer;
}
header nav .cart .NoContent p{
    font-size:30px;
    text-transform: capitalize;
    color: #222;
}
.container {
  padding: 10px 100px;
  padding-right: 0;
  color: white;
  display: grid;
  grid-template-columns: 2fr 3fr;
  position: relative;
  min-height: 90vh;
}
.container.disable {
  pointer-events: none;
}
.container .info {
  margin-top: 130px;
}
.container .info h2 {
  font-size: 40px;
  line-height: 1.6;
  margin-bottom: 20px;
  letter-spacing: 4px;
}
.container .info h2 span {
  font-family: cursive;
  font-style: italic;
}
.container .info p {
  font-size: 22px;
}
.container .info .addCart {
  display: block;
  color: white;
  border: white;
  text-transform: capitalize;
  padding: 10px 25px;
  background: transparent;
  border: solid 3px white;
  border-radius: 8px;
  margin-top: 50px;
  text-align: center;
  width: fit-content;
  font-size: clamp(1.1em, 1.4em, 1.6em);
  font-weight: bold;
}
.container .info .pagination {
  list-style: none;
  display: flex;
  gap: 20px;
  margin-top: 30px;
}
.container .info .pagination li {
  width: 40px;
  height: 40px;
  border: solid 2px white;
  border-radius: 50%;
  cursor: url(images/click.png) 15 15, auto;
}

.container .info .pagination li {
  background: attr(data-color);
}
.container .info .pagination li.active {
  border-width: 4px;
}
.container .buttons {
  width: 350px;
  display: flex;
  justify-content: space-between;
  margin-top: 40px;
}
.container .buttons button {
  outline: 0;
  background: transparent;
  border: solid 2px white;
  border-radius: 20px;
  padding: 10px 30px;
  color: white;
  font-size: 20px;
  cursor: pointer;
}
.container .image {
  position: relative;
  overflow: hidden;
}
.container .image img {
  width: 550px;
  position: absolute;
  left: 100%;
  top: 50%;
  transform: translateY(-50%);
  opacity: 0;
  filter: blur(20px);
  transition: 500ms;
  animation: imgMove 5s infinite ease-in-out;
}
.container .image h2 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 250px;
  text-shadow: 0 0 20px white;
  font-family: sans-serif;
}
@keyframes imgMove {
  0% {
    rotate: 0;
  }
  50% {
    rotate: 2deg;
  }
  100% {
    rotate: 0;
  }
}
.container .image img.active {
  cursor: url(images/icons8-cursor-94.png), auto;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  opacity: 1;
  filter: blur(0);
  transition: 1s;
}
.container .image img.active:hover {
  scale: 1.04;
}

@media (max-width: 1199px) {
  .container .image img {
    width: 400px;
  }
}
@media (max-width: 992px) {
  .container .image img {
    width: 350px;
  }
}
@media (max-width: 767px) {
  header {
    padding: 10px 20px;
  }
  .container {
    grid-template-columns: 1fr;
    text-align: center;
    padding: 10px 30px;
  }
  .container .info {
    margin-top: 70px;
  }
  .container .info .pagination {
    justify-content: center;
  }
  .container .buttons {
    width: 100%;
  }
  .container .info .addCart {
    margin: 20px auto;
  }
  .container .image img {
    width: 320px;
  }
  .container .image {
    width: 100%;
    height: 420px;
  }
}

